k8s/istio/virtualservices.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pycrud-route
  namespace: dev
spec:
  hosts:
    - pycrud
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: pycrud
          port:
            number: 80
